# SmallRegister

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  bashrc  clang-format  gdbinit  vimrc  z
config/terminator/: config
docs/: api.md
small_register/: abbreviated_forms.hpp  small_details.hpp  small_map.hpp  small_register.hpp
small_register_refined/: small_map.hpp  small_register.hpp  small_register_internal.hpp
test/: CMakeLists.txt  abbreviated_forms.cpp  chaining.cpp  clearing.cpp  created_from_existing_raw_register.cpp  getting.cpp  helpers.hpp  loading.cpp  mapping.cpp  mapping_failed_compile_time.cpp  mutating_register.cpp  obtain_individual_bitfields.cpp  order_shall_not_matter.cpp  setting.cpp  single_byte_clearing.cpp  single_byte_clearing_whole_fields.cpp  single_byte_setting.cpp  static_assertion_test.cpp.in  static_assertions.cmake  wrong_types_of_register_ids_compile_time.cpp
vim/UltiSnips/: c.snippets  sh.snippets
vim/pythonx/: cpp_helpers.py  snippet_helpers.py
